--- a/.github/workflows/upgrade-pip-to-latest.yaml
+++ b/.github/workflows/upgrade-pip-to-latest.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   setup-and-test:
-    runs-on: ubuntu-focal
+    runs-on: ubuntu-20.04
 
     steps:
       - name: Checkout repository
